--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Oswald:wght@400;700&family=Share+Tech&display=swap');
 nav {
   position: fixed;
   top: 0px;
@@ -14,14 +15,14 @@ nav {
   transition: 250ms;
 }
 
-.navbar_on_move{
-  
-  box-shadow: 0px 0px 31px #00000091;
-  background-color: rgb(0 50 87);
+.navbar_on_move {
+  background-color: rgba(20, 22, 39, 0.545);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
 }
 nav h1 {
   font-size: 30px;
-  font-family: monospace;
+  font-family: 'Share Tech', sans-serif;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -31,7 +32,7 @@ nav h1 img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-right: 6px;
 }
 
 #hamburger {
