--- a/src/components/Top Header/Header.css
+++ b/src/components/Top Header/Header.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Monomaniac+One&family=Oswald:wght@400;700&family=Share+Tech&display=swap');
+
 .header_container{
     position: absolute;
-    top: 35vh;
+    top:50%;
+    transform: translateY(-50%);
     padding: 1rem 1.4rem;
     right:5%;
     line-height:1.5;
@@ -9,13 +12,34 @@
     align-items: flex-end;
 }
 
+/* 
 .header_container h1{
+    background-color: red;
+    background-image: linear-gradient(45deg, #f3ec78, #af4261);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+}
+.header_container span{
+    color: azure;
+    -webkit-text-fill-color: azure; 
+} */
+.header_container h1,span{
     font-size: 4.5rem;
-    font-family: "Oswald", sans-serif;
+    text-align: right;
+    /* font-family: 'Share Tech', sans-serif; */
+    font-family: 'Monomaniac One', sans-serif;
+    /* font-family: 'Archivo Black', sans-serif; */
+    font-weight: 500;
+    
 }
 
-.header_container p{
+.header_container h4{
     font-size: 1.5rem;
+    color:#FFC436
 }
 .div_holder{
     width: -moz-fit-content;
@@ -24,10 +48,9 @@
 }
 .sub_header {
     color: #fff;
-    
     z-index: 10;
     font-size: 1.4rem;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Monomaniac One', sans-serif;
     overflow: hidden;
     border-right: .15em solid rgb(0, 94, 255);
     white-space: nowrap;
@@ -66,27 +89,30 @@
         border-color: rgb(59, 155, 215);
     }
 }
-@media (max-width: 980px) {
+@media (max-width: 1000px) {
 
     .header_container {
         width: 100%;
         right: 0;
     }
-    .header_container h1{
+    .header_container h1, span{
         font-size: 3.8rem;
     }
 }
 
-@media (max-width: 780px) {
-    .header_container h1{
+@media (max-width: 800px) {
+    .header_container h1, span{
         font-size: 3rem;
     }
 }
 
-@media (max-width: 610px) {
-    
-    .header_container h1{
+@media (max-width: 650px) {
+    .header_container{
+        align-items: center;
+    }
+    .header_container h1, span{
         font-size: 2rem;
+        text-align: center;
         
     }
     .header_container p{
