--- a/Components/CardSlider/CardSlider.css
+++ b/Components/CardSlider/CardSlider.css
@@ -1,10 +1,11 @@
 #speakers {
     margin: 50px auto;
-    /* border-top: 1px solid #3b2e70;
-    border-bottom: 1px solid #3b2e70; */
+    border-top: 1px solid #3b2e70;
+    border-bottom: 1px solid #3b2e70;
     padding: 20px 0px;
-    /* background-color: rgb(16, 34, 60); */
-    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.278); */
+    background-color: rgb(16, 34, 60);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.278);
+    max-width: 1080px;
 }
 
 #speakers .heading {
@@ -29,9 +30,9 @@
 }
 
 .academic .embla__slide {
-    flex: 0 0 30%;
+    flex: 0 0 25%;
 }
 
 .industry .embla__slide {
-    flex: 0 0 20%;
+    flex: 0 0 15%;
 }
