--- a/Components/Registration/Registration.css
+++ b/Components/Registration/Registration.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin: 50px auto;
     border-top: 1px solid #3b2e70;
     border-bottom: 1px solid #3b2e70;
     padding: 20px 0px;
@@ -38,6 +37,10 @@
     color: #FFCD4B;
 }
 
+.list-inside{
+    text-align: left;
+}
+
 .linkStyle {
     color: #FE7BE5;
 }
@@ -60,6 +63,7 @@
     }
 
     .table-auto {
+        width: -moz-fit-content;
         width: fit-content;
         overflow-x: auto;
     }
