--- a/Components/Top Header/Header.css
+++ b/Components/Top Header/Header.css
@@ -12,21 +12,13 @@
     align-items: flex-end;
 }
 
-/* 
+
 .header_container h1{
-    background-color: red;
-    background-image: linear-gradient(45deg, #f3ec78, #af4261);
-    background-size: 100%;
-    background-repeat: repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
+    color:#FFC436
 }
 .header_container span{
     color: azure;
-    -webkit-text-fill-color: azure; 
-} */
+}
 .header_container h1,span{
     font-size: 4.5rem;
     text-align: right;
