--- a/Components/CardSlider/Card/Card.css
+++ b/Components/CardSlider/Card/Card.css
@@ -55,14 +55,14 @@
     font-weight: 700;
 }
 
-
+/* 
 .card:hover::after {
     filter: blur(30px);
 }
 
 .card:hover::before {
     transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
-}
+} */
 
 .inner-card img {
     width: 140px;
