--- a/Components/CardSlider/CardSlider.css
+++ b/Components/CardSlider/CardSlider.css
@@ -7,7 +7,10 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.278);
     max-width: 1080px;
 }
-
+.heading{
+    text-align: center;
+    font-size: 2.5rem;
+}
 #speakers .heading {
     margin-bottom: 25px;
 }
