--- a/Components/Registration/Registration.css
+++ b/Components/Registration/Registration.css
@@ -1,92 +1,93 @@
 #registration {
-    color: #FFFFFF;
-    letter-spacing: 0.05em;
-    line-height: 1.5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background-color: rgb(16, 34, 60);
-    padding: 1rem 2rem;
+  color: #ffffff;
+  font-family: sans-serif;
+  letter-spacing: 0.05em;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgb(16, 34, 60);
+  padding: 1rem 2rem;
 }
 
 .tableCellStyle {
-    background-color: rgb(204, 151, 16);
+  background-color: rgb(204, 151, 16);
 }
 
 .table-responsive {
-    display: flex;
-    justify-content: center;
-    max-width: 100vw;
-    overflow-x: auto;
+  display: flex;
+  justify-content: center;
+  max-width: 100vw;
+  overflow-x: auto;
 }
 
 .headingStyle {
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 3rem;
+  font-family: "Share Tech", sans-serif;
+  color: #ffc436;
+  text-align: center;
+  border-bottom: 1px solid #ffc436;
+  font-size: 3rem;
 }
 
 .yellowHeadingStyle {
-    color: #FFCD4B;
-    margin-top: 1rem;
-    text-align: center;
+  color: #ffcd4b;
+  margin-top: 1rem;
+  text-align: center;
 }
-.qr_scanner{
-   width: 100%;
-   display: block;
-   text-align: center;
+.qr_scanner {
+  width: 100%;
+  display: block;
+  text-align: center;
 }
 
-
-.list-inside{
-    margin-left: 1rem;
+.list-inside {
+  margin-left: 1rem;
 }
 .linkStyle {
-    color: #FE7BE5;
+  color: #fe7be5;
 }
 
 @media screen and (max-width: 768px) {
-    
-    .bodyStyle {
-        padding: 20px;
-    }
+  .bodyStyle {
+    padding: 20px;
+  }
 
-    .text-xl {
-        font-size: 1.25rem;
-    }
+  .text-xl {
+    font-size: 1.25rem;
+  }
 
-    .w-1-2 {
-        width: 100%;
-    }
+  .w-1-2 {
+    width: 100%;
+  }
 
-    .mt-4 {
-        margin-top: 1rem;
-    }
+  .mt-4 {
+    margin-top: 1rem;
+  }
 
-    .table-auto {
-        width: -moz-fit-content;
-        width: fit-content;
-        overflow-x: auto;
-    }
+  .table-auto {
+    width: -moz-fit-content;
+    width: fit-content;
+    overflow-x: auto;
+  }
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-    }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
 
-    th,
-    td {
-        padding: 8px;
-        text-align: left;
-    }
+  th,
+  td {
+    padding: 8px;
+    text-align: left;
+  }
 }
 
 @media screen and (max-width: 458px) {
-    .headingStyle{
-        font-size: 2rem;
-    }
-    #registration{
-        padding: 1rem 0.3rem;
-    }
+  .headingStyle {
+    font-size: 2rem;
+  }
+  #registration {
+    padding: 1rem 0.3rem;
+  }
 }
