--- a/Components/ScheduleAndRegister/ScheduleAndRegister.css
+++ b/Components/ScheduleAndRegister/ScheduleAndRegister.css
@@ -4,32 +4,36 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  background: rgb(2, 39, 67);
+  background: rgb(1, 37, 64);
   background: linear-gradient(
     0deg,
-    rgba(2, 39, 67, 1) 2%,
-    rgba(255, 255, 255, 1) 100%
+    rgba(1, 37, 64, 1) 12%,
+    rgba(205, 230, 251, 1) 100%
   );
   padding-bottom: 3rem;
 }
 
-#news,#schedule {
+#news,
+#schedule {
   margin: 50px auto 0px auto;
   border: 3px solid rgb(0, 78, 137);
   border-radius: 10px;
-  background-color:  rgb(2, 39, 67);
-  color: azure;
+  background-color: rgb(16, 34, 60);
   min-width: 300px;
-
+  font-family: sans-serif;
 }
-#schedule{
+#schedule {
   width: 40%;
-
+  padding: 2rem 1rem;
 }
 
-.NewsSchedule-header {
+.NewsSchedule-header h1 {
+  color: #ffc436;
   text-align: center;
-  padding: 10px;
+  line-height: 1.2;
+  font-size: 3rem;
+  font-family: "Share Tech", sans-serif;
+  border-bottom: 1px solid #ffc436;
 }
 
 .NewsSchedule-body {
@@ -47,10 +51,11 @@
   margin: 10px 0;
 }
 @media screen and (max-width: 1368px) {
-  #NewsSchedule{
+  #NewsSchedule {
     flex-direction: column;
   }
-  #news,#schedule{
+  #news,
+  #schedule {
     min-width: none;
     max-width: 700px;
     width: 100%;
