--- a/Components/Patron/PatronCard.css
+++ b/Components/Patron/PatronCard.css
@@ -2,13 +2,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: white;
+  background-color: rgba(205, 230, 251, 1);
   padding: 2rem 1rem;
   align-items: center;
 }
 .card_holder_patron h2 {
   color: #262626;
-  font-size: 2rem;
+  font-size: 3rem;
+  text-align: center;
+  border-bottom: 1px solid #262626;
+  font-family: "Share Tech", sans-serif;
 }
 
 .workshop_con {
@@ -52,6 +55,13 @@
   margin: auto;
 }
 
-.info_container{
-    text-decoration: none;
+.info_container {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .workshop_con {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
