--- a/Components/FooterComponent/FooterComponent.css
+++ b/Components/FooterComponent/FooterComponent.css
@@ -5,9 +5,9 @@
 .footer {
   position: relative;
   width: 100%;
-  background: #1f4172;
+  background: #0F2C59;
   min-height: 40px;
-  padding: 2rem 3rem;
+  padding: 2rem ;
   display: flex;
   justify-content: center;
   align-items: center;
