--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 .about_container {
-  background: rgb(1, 37, 64);
-  background: linear-gradient(
-    180deg,
-    rgba(1, 37, 64, 1) 12%,
-    rgba(205, 230, 251, 1) 100%
-  );
-  padding: 3rem 0.5rem;
+  background: rgb(1,35,62);
+background: linear-gradient(180deg, rgba(1,35,62,1) 3%, rgba(205,230,251,1) 100%);
+  padding: 4rem 0.5rem 2.5rem;
 }
