--- a/Components/About/About.css
+++ b/Components/About/About.css
@@ -25,6 +25,8 @@
   font-size: 1.4rem;
   letter-spacing: 1.5;
   font-family: "Share Tech", sans-serif;
+  padding-bottom: 1rem;
+  text-align: justify;
 }
 
 @media (max-width: 500px) {
