--- a/Components/Patron/PatronCard.css
+++ b/Components/Patron/PatronCard.css
@@ -26,7 +26,7 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
-  border: 4px solid #3881db;
+  border: 2px solid #1a3556;
   box-shadow: 0 6px 10px rgba(207, 212, 222, 1);
   border-radius: 10px;
   text-align: center;
@@ -47,7 +47,7 @@
   object-fit: cover;
   width: 12rem;
   height: 12rem;
-  border: 4px solid #3881db;
+  border: 2px solid #24364b;
   border-radius: 999px;
   display: flex;
   justify-content: center;
