--- a/Components/Team/TeamCard.css
+++ b/Components/Team/TeamCard.css
@@ -4,8 +4,12 @@
   align-items: center;
   gap: 1rem;
   padding: 0rem 2rem 4rem;
-  background: rgb(1,37,64);
-background: linear-gradient(180deg, rgba(1,37,64,1) 40%, rgba(7,27,36,1) 100%);
+  background: rgb(1, 37, 64);
+  background: linear-gradient(
+    180deg,
+    rgba(1, 37, 64, 1) 40%,
+    rgba(7, 27, 36, 1) 100%
+  );
 }
 
 .card_holder_team h2 {
@@ -32,20 +36,21 @@ background: linear-gradient(180deg, rgba(1,37,64,1) 40%, rgba(7,27,36,1) 100%);
   color: #fff;
   font-family: sans-serif;
   transition: all 0.3s ease;
-  max-width: 200px;
+  max-width: 180px;
   line-height: 1.7;
   width: 100%;
   min-height: 70px;
   text-decoration: none;
 }
 
-.team_card:hover{
-    transform: scale(1.02);
+.team_card:hover {
+  transform: scale(1.02);
 }
 
 .team_con {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  width: 90%;
   justify-content: space-evenly;
 }
