--- a/Components/FooterComponent/FooterComponent.css
+++ b/Components/FooterComponent/FooterComponent.css
@@ -1,109 +1,25 @@
-.footer-cover {
-  height: 125px;
-}
+
 
 .footer {
   position: relative;
   width: 100%;
   background: #0F2C59;
-  min-height: 40px;
-  padding: 2rem ;
+  min-height: 70px;
+  padding: 2rem 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.menu {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  gap: 1rem;
-  flex-wrap: wrap;
+
+.footer p{
+  letter-spacing: 2px;
+  color: rgb(196, 205, 213);
 }
 
-.menu__item {
-  list-style: none;
-}
 
-.menu__link {
-  font-size: 1.2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
+.footer a{
   text-decoration: none;
-  opacity: 0.75;
-  font-weight: 300;
-}
-
-.menu__link:hover {
-  opacity: 1;
-}
-
-.footer p {
-  color: #fff;
-  margin: 15px 0 10px 0;
-  font-size: 1rem;
-  font-weight: 300;
-}
-
-.wave {
-  position: absolute;
-  top: -40px;
-  left: 0;
-  width: 100%;
-  height: 40px;
-  background: url("../../assets/wave.png");
-  background-size: 1000px 40px;
-}
-
-.wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWaves 4s linear infinite;
-}
-
-.wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
-}
-
-.wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
-}
-
-.wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
-}
-
-@keyframes animateWaves {
-  0% {
-    background-position-x: 1000px;
-  }
-
-  100% {
-    background-position-x: 0px;
-  }
-}
-
-@keyframes animate {
-  0% {
-    background-position-x: -1000px;
-  }
-
-  100% {
-    background-position-x: 0px;
-  }
+  color: inherit;
 }
