--- a/Components/Registration/Registration.css
+++ b/Components/Registration/Registration.css
@@ -1,93 +1,306 @@
-#registration {
-  color: #ffffff;
-  font-family: sans-serif;
-  letter-spacing: 0.05em;
-  line-height: 1.5;
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&family=Poppins:wght@600&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech&display=swap");
+
+.Registration_container {
+  margin-top: 2%;
+  min-height: 1000px;
+  margin-left: 15%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-around;
+  padding: 20px;
+  margin: 50px auto 0px auto;
+  border-radius: 10px;
   background-color: rgb(16, 34, 60);
-  padding: 1rem 2rem;
+  min-width: 300px;
+  max-width: 1080px;
 }
 
-.tableCellStyle {
-  background-color: rgb(204, 151, 16);
+.reg_heading_container {
+  height: 8%;
+  width: 90%;
+  margin-left: 5%;
 }
 
-.table-responsive {
-  display: flex;
-  justify-content: center;
-  max-width: 100vw;
-  overflow-x: auto;
-}
-
-.headingStyle {
-  font-family: "Share Tech", sans-serif;
+.reg_heading {
+  margin-top: 2%;
+  font-family: "Poppins", sans-serif;
   color: #ffc436;
   text-align: center;
   border-bottom: 1px solid #ffc436;
   font-size: 3rem;
 }
 
-.yellowHeadingStyle {
-  color: #ffcd4b;
-  margin-top: 1rem;
-  text-align: center;
+.reg_payment {
+  width: 80%;
+  margin-left: 10%;
 }
-.qr_scanner {
+
+.payment_heading {
+  font-family: "Poppins", sans-serif;
+  color: #ffc436;
+  text-align: center;
+  font-size: 1.4em;
+}
+
+.reg_list {
+  color: white;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  padding-left: 1rem;
+}
+
+.reg_fee {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.fee_heading {
+  font-family: "Poppins", sans-serif;
+  color: #ffc436;
+  text-align: center;
+  font-size: 1.4em;
+}
+
+.fee_container {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: rgb(16, 34, 60);
+  padding: 1px;
+}
+
+.grid-heading {
+  background-color: rgb(204, 151, 16);
+  color: white;
+  border: 1px solid white;
+  padding: 4%;
+  font-size: 1.5em;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.grid-item {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  padding: 4%;
+  font-size: 1.2em;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.QR_Fee {
+  width: 80%;
+  margin-left: 10%;
+}
+
+.QR_heading {
+  font-family: "Poppins", sans-serif;
+  color: #ffc436;
+  text-align: center;
+  font-size: 1.3em;
+}
+
+
+.line_height_2{
+  line-height: 2;
+}
+
+.payment_info_con{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.QR_img {
+  height: 200px;
+  width: 200px;
+  margin: 0 auto;
+
+}
+
+.QR_img img {
+  height: 100%;
   width: 100%;
-  display: block;
-  text-align: center;
 }
 
-.list-inside {
-  margin-left: 1rem;
-}
-.linkStyle {
-  color: #fe7be5;
-}
-
-@media screen and (max-width: 768px) {
-  .bodyStyle {
-    padding: 20px;
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .Registration_container {
+    margin-top: 2%;
+    margin-left: 0%;
+    height: 80%;
+    width: 100%;;
+    background-color: rgb(16, 34, 60);
+    border-radius: 20px;
   }
 
-  .text-xl {
-    font-size: 1.25rem;
-  }
-
-  .w-1-2 {
-    width: 100%;
-  }
-
-  .mt-4 {
-    margin-top: 1rem;
-  }
-
-  .table-auto {
-    width: -moz-fit-content;
-    width: fit-content;
-    overflow-x: auto;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  th,
-  td {
-    padding: 8px;
-    text-align: left;
-  }
-}
-
-@media screen and (max-width: 458px) {
-  .headingStyle {
+  .reg_heading {
+    margin-top: 2%;
+    font-family: "Poppins", sans-serif;
+    color: #ffc436;
+    text-align: center;
+    border-bottom: 1px solid #ffc436;
     font-size: 2rem;
   }
-  #registration {
-    padding: 1rem 0.3rem;
+
+  .reg_list {
+    color: white;
+    font-size: 1.2em;
+    font-family: sans-serif;
+    padding-left: 1rem;
+  }
+
+  .payment_heading {
+    font-family: "Poppins", sans-serif;
+    color: #ffc436;
+    text-align: center;
+    font-size: 1.2em;
+  }
+
+  .fee_container {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: rgb(16, 34, 60);
+    padding: 1px;
+  }
+
+  .grid-heading {
+    background-color: rgb(204, 151, 16);
+    color: white;
+    border: 1px solid white;
+    padding: 4%;
+    font-size: 0.85em;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+  }
+
+  .grid-item {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    padding: 4%;
+    font-size: 0.8em;
+    text-align: center;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 370px) and (max-width: 550px) {
+  .Registration_container {
+    margin-top: 2%;
+    padding: 20px;
+    margin-left: 0%;
+    width: 100%;;
+    background-color: rgb(16, 34, 60);
+    border-radius: 20px;
+  }
+
+  .reg_heading {
+    margin-top: 2%;
+    font-family: "Poppins", sans-serif;
+    color: #ffc436;
+    text-align: center;
+    border-bottom: 1px solid #ffc436;
+    font-size: 2.2rem;
+  }
+
+  .fee_container {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: rgb(16, 34, 60);
+    padding: 1px;
+  }
+
+  .grid-heading {
+    background-color: rgb(204, 151, 16);
+    color: white;
+    border: 1px solid white;
+    padding: 4%;
+    font-size: 1em;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+  }
+
+  .grid-item {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    padding: 4%;
+    font-size: 0.8em;
+    text-align: center;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 768px) {
+  .Main_container {
+    height: 100%;
+    width: 100%;;
+    background: linear-gradient(
+      0deg,
+      rgba(1, 37, 64, 1) 12%,
+      rgba(205, 230, 251, 1) 100%
+    );
+  }
+
+  .Registration_container {
+    margin-top: 2%;
+    margin-left: 0%;
+    height: 80%;
+    width: 100%;;
+    background-color: rgb(16, 34, 60);
+    border-radius: 20px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1000px) {
+  .Registration_container {
+    margin-top: 2%;
+    height: 85%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: rgb(16, 34, 60);
+    border-radius: 20px;
+  }
+}
+.payment_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+@media only screen and (min-width: 1000px) and (max-width: 1250px) {
+  .Registration_container {
+    margin-top: 2%;
+    height: 85%;
+    width: 80%;
+    margin-left: 10%;;
+    background-color: rgb(16, 34, 60);
+    border-radius: 20px;
   }
 }
