--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 .about_container {
-  background: rgb(1,35,62);
-background: linear-gradient(180deg, rgba(1,35,62,1) 3%, rgba(205,230,251,1) 100%);
+  background: rgb(1, 35, 62);
+  background: linear-gradient(
+    180deg,
+    rgba(1, 35, 62, 1) 3%,
+    rgba(205, 230, 251, 1) 100%
+  );
   padding: 4rem 0.5rem 2.5rem;
+}
+
+#pot {
+  bottom: 5%;
+  display: inline;
+  min-width: 400px;
+  position: absolute;
+  -webkit-animation: linear infinite;
+  -webkit-animation-name: run;
+  -webkit-animation-duration: 15s;
+}
+#pot h1{
+  font-size: 1rem;
+}
+@-webkit-keyframes run {
+  0% {
+    transform: translateX(100%);
+    left: 100%;
+  }
+  100% {
+    transform: translateX(-100%);
+    left: 0;
+  }
 }
