--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,11 @@ html {
   position: absolute;
   top: 60vh;
 }
-
+.display_none{
+ 
+    display: none;
+  
+}
 @media screen and (max-width: 768px) {
   #small_bg_container{
     background-image: url("/img/earthSmall.png");
