--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 
 body {
   background: linear-gradient( rgb(0 30 55), rgb(3 54 86));
+  overflow-x: hidden;
+  min-width: 100vw;
 }
 #root::before {
   content: "";
