--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Monomaniac+One&family=Oswald:wght@400;700&family=Share+Tech&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Monomaniac+One&family=Oswald:wght@400;700&family=Share+Tech&display=swap");
 
 * {
   margin: 0;
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: linear-gradient( rgb(0 30 55), rgb(3 54 86));
+  background: linear-gradient(rgb(0 30 55), rgb(3 54 86));
   overflow-x: hidden;
   min-width: 100vw;
 }
@@ -55,18 +55,27 @@ html {
   position: absolute;
   top: 60vh;
 }
-.display_none{
- 
-    display: none;
-  
+.display_none {
+  display: none;
 }
+
+.whenSmall {
+  background-image: url("/img/whensmall.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* max-width: 1100px;
+  max-height: 646px; */
+}
+
+
+
 @media screen and (max-width: 768px) {
-  #small_bg_container{
+  #small_bg_container {
     background-image: url("/img/earthSmall.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
-  #container_of_top{
+  #container_of_top {
     display: none;
   }
 }
