--- a/Components/Registration/Registration.css
+++ b/Components/Registration/Registration.css
@@ -81,7 +81,7 @@
   color: white;
   border: 1px solid white;
   padding: 4%;
-  font-size: 1.5em;
+  font-size: 1em;
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
@@ -98,7 +98,6 @@
 
 .QR_Fee {
   width: 80%;
-  margin-left: 10%;
 }
 
 .QR_heading {
@@ -108,12 +107,11 @@
   font-size: 1.3em;
 }
 
-
-.line_height_2{
+.line_height_2 {
   line-height: 2;
 }
 
-.payment_info_con{
+.payment_info_con {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -123,7 +121,6 @@
   height: 200px;
   width: 200px;
   margin: 0 auto;
-
 }
 
 .QR_img img {
@@ -131,14 +128,15 @@
   width: 100%;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 370px) {
+@media only screen and  (max-width: 370px) {
   .Registration_container {
     margin-top: 2%;
     margin-left: 0%;
     height: 80%;
-    width: 100%;;
+    width: 100%;
     background-color: rgb(16, 34, 60);
     border-radius: 20px;
+    padding: 0;
   }
 
   .reg_heading {
@@ -156,7 +154,10 @@
     font-family: sans-serif;
     padding-left: 1rem;
   }
-
+  .line_height_2 {
+    font-size: 0.8rem;
+    text-align: left;
+  }
   .payment_heading {
     font-family: "Poppins", sans-serif;
     color: #ffc436;
@@ -203,13 +204,16 @@
 @media only screen and (min-width: 370px) and (max-width: 550px) {
   .Registration_container {
     margin-top: 2%;
-    padding: 20px;
+    padding: 0px;
     margin-left: 0%;
-    width: 100%;;
+    width: 100%;
     background-color: rgb(16, 34, 60);
     border-radius: 20px;
   }
-
+  .line_height_2 {
+    font-size: 0.8rem;
+    text-align: left;
+  }
   .reg_heading {
     margin-top: 2%;
     font-family: "Poppins", sans-serif;
@@ -257,7 +261,7 @@
 @media only screen and (min-width: 550px) and (max-width: 768px) {
   .Main_container {
     height: 100%;
-    width: 100%;;
+    width: 100%;
     background: linear-gradient(
       0deg,
       rgba(1, 37, 64, 1) 12%,
@@ -269,7 +273,7 @@
     margin-top: 2%;
     margin-left: 0%;
     height: 80%;
-    width: 100%;;
+    width: 100%;
     background-color: rgb(16, 34, 60);
     border-radius: 20px;
   }
@@ -299,7 +303,7 @@
     margin-top: 2%;
     height: 85%;
     width: 80%;
-    margin-left: 10%;;
+    margin-left: 10%;
     background-color: rgb(16, 34, 60);
     border-radius: 20px;
   }
